<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:liftOnScroll="true">
		
		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/mToolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:title="@string/app_name"
			app:titleCentered="true"
			app:titleTextColor="?attr/colorOnPrimary" />
	</com.google.android.material.appbar.AppBarLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="8dp"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">
			
			<TextView
				android:id="@+id/tvTaskID"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/txt_task_id"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_id" />
			
			<TextView
				android:id="@+id/tvSpeciality"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_category"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_category" />
			
			<TextView
				android:id="@+id/tvDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_description"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_description" />
			
			<TextView
				android:id="@+id/tvStartingDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_starting_date"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_starting_date" />
			
			<TextView
				android:id="@+id/tvEndingDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_ending_date"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_ending_date" />
			
			
			<TextView
				android:id="@+id/tvPriority"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_priority"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_priority" />
			
			<TextView
				android:id="@+id/tvTime"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/txt_task_time"
				android:textAlignment="textStart"
				tools:text="@string/txt_task_time" />
		
		</LinearLayout>
		
		
		<Button
			android:id="@+id/finishBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/txt_finish_task" />
	</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>