<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/tasklynx_gradient"
	android:orientation="vertical"
	
	android:padding="20dp"
	android:textAlignment="center">
	
	<ImageView
		android:id="@+id/ivLogo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:contentDescription="@string/txt_logo"
		app:srcCompat="@drawable/tasklynx_mobile_empty_logo" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tilIdField"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"

		android:layout_marginTop="20dp"
		android:textColorHint="@color/white"
		app:hintTextColor="@color/white">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiedIdField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/txt_id_field"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:textColorHint="@color/white"
		app:hintTextColor="@color/white">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiedPasswordField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/txt_password_field"
			android:inputType="text|textPassword"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
	</com.google.android.material.textfield.TextInputLayout>
	
	<Button
		android:id="@+id/button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/txt_login_title" />
</LinearLayout>