<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiePassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/txt_password_field"
			android:inputType="text|textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/tiePassConfirm"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/txt_password_confirm"
			android:inputType="text|textPassword" />

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/txtError"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/txt_error_password"
		android:textAlignment="center"
		android:textColor="@color/md_theme_error"
		android:textSize="16sp"
		android:visibility="invisible" />
</LinearLayout>